--- a/TBP/index.html
+++ b/TBP/index.html
@@ -266,7 +266,7 @@ $(document).ready(function(){
     $('.lazy').slick({
         lazyLoad: 'ondemand',
         arrows: true,
-        infinite: true,
+        /* infinite: true, */
         speed: 500,
         fade: true,
         cssEase: 'linear'
